updated maven config to fix error